WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
44121
When the web process crashes and a crash log is being saved, WebKitTestRunner thinks the web process has become unresponsive
https://bugs.webkit.org/show_bug.cgi?id=44121
Summary
When the web process crashes and a crash log is being saved, WebKitTestRunner...
Adam Roben (:aroben)
Reported
2010-08-17 12:24:00 PDT
run-webkit-tests records crashes in the WebKit2 web process as time-outs instead of crashes when a crash log is being saved. We need some way to communicate to run-webkit-tests that the web process has crashed, even when the post-mortem debugger is attached and saving a crash log.
Attachments
Save a crash log when the web process crashes
(17.41 KB, patch)
2011-03-01 09:31 PST
,
Adam Roben (:aroben)
sam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Adam Roben (:aroben)
Comment 1
2010-08-17 13:53:23 PDT
<
rdar://problem/8320759
>
Adam Roben (:aroben)
Comment 2
2010-12-14 12:53:47 PST
Now that WebKitTestRunner detects hangs in the web process, WTR is the one getting confused here. WTR thinks the web process has hung.
Adam Roben (:aroben)
Comment 3
2011-01-13 09:06:59 PST
See also
bug 52330
.
Adam Roben (:aroben)
Comment 4
2011-03-01 07:41:13 PST
Here's an example:
http://build.webkit.org/results/Windows%207%20Release%20(WebKit2%20Tests)/r79994%20(3567)/
A bunch of tests caused the web process to crash, but WTR (and thus run-webkit-tests) thought that the tests hung instead.
Adam Roben (:aroben)
Comment 5
2011-03-01 09:31:33 PST
Created
attachment 84239
[details]
Save a crash log when the web process crashes
Adam Roben (:aroben)
Comment 6
2011-03-01 09:34:53 PST
***
Bug 55472
has been marked as a duplicate of this bug. ***
Adam Roben (:aroben)
Comment 7
2011-03-01 10:15:49 PST
Committed
r80009
: <
http://trac.webkit.org/changeset/80009
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug